--- a/src/css/inc/_global.scss
+++ b/src/css/inc/_global.scss
@@ -208,6 +208,7 @@ body{
           border-radius: 5px;
           outline:none;
           color: #71798d;
+          -moz-appearance:none
           
           option{
               padding: 4px 7px;
@@ -257,7 +258,7 @@ body{
           border-radius: 5px;
           box-shadow: 0 0 3px rgba(0,0,0,0.07);
           span{
-            font-size:35px;
+            font-size:30px;
             margin-right:15px;
           }
           p{
