--- a/src/css/inc/_variables.scss
+++ b/src/css/inc/_variables.scss
@@ -1,25 +1,51 @@
-$theme-light : #f5f7fb;
+$theme-light: #f5f7fb;
 $theme-blue: #4054ff;
 $theme-gray: #9aa2b4;
 $theme-purple: #9845f4;
-$text-light: #6c7289;
+$text-color: #383f58;
+$text-light: #6b7183;
 $light-blue: #e8edf6;
 $light-purple: #f8f1ff;
-.d-flex{
-  display:flex;
-  flex-wrap: wrap;
+.d-flex {
+	display: flex;
+	flex-wrap: wrap;
 }
-.align-center{
-  align-items: center;
+.align-center {
+	align-items: center;
 }
-.justify-center{
-  justify-content: center;
+.justify-center {
+	justify-content: center;
 }
-.justify-between{
-  justify-content: space-between;
+.justify-between {
+	justify-content: space-between;
 }
 
+.p-40 {
+	padding: 40px;
+}
+.pl-10 {
+	padding-left: 10px;
+}
+.mr-15 {
+	margin-right: 15px;
+}
+.mt-10 {
+	margin-top: 10px;
+}
+.pt-20 {
+	padding-top: 20px;
+}
+.py-20 {
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+.pr-15 {
+	padding-right: 15px;
+}
 
-.p-40{
-  padding: 40px;
+.w-400 {
+	width: 400px;
+}
+.w-100 {
+	width: 100% !important;
 }
